fix footer on small devices

--- a/app/assets/stylesheets/static_pages/_footer.css.scss
+++ b/app/assets/stylesheets/static_pages/_footer.css.scss
@@ -15,6 +15,11 @@ footer.site-footer {
       }
     }
   }
+
+  @media (max-width: $screen-xs-max) {
+    display: inherit !important;
+  }
+
   img.social-icon {
     //mobile
     @media (max-width: $screen-xs-max) {
